@@ -1,3 +1,7 @@
+2003-05-17  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* ntoskrnl/io/irp.c (IofCallDriver): Don't reference FileObject.
+
 2003-05-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* ntoskrnl/io/cleanup.c (IopCompleteRequest1, IoSecondStageCompletion):
